--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+data/urls.csv
+myenv/Lib/site-packages/lance/lance.pyd
+
 # Ruff stuff:
 .ruff_cache/
 
